# graphics

./: .cproject  .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  graphics.pc  graphics.pc.in  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
example/: Makefile  graphics.cc  graphics.h  main  main.cc
src/: Makefile  Makefile.am  Makefile.in  explode.h  graphics.cc  graphics.h
src/.deps/: graphics.Plo  main.Po
